--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "allure:clean": "rimraf ./allure-results && rimraf ./allure-report",
-    "test": "npm run allure:clean && cross-env test_env=test npx playwright test tests/business.",
-    "report": "npx playwright show-report",
+    "test": "npm run allure:clean && cross-env test_env=test npx playwright test tests/login.",
+    "playwright-report": "npx playwright show-report",
     "allure:generate": "allure generate ./allure-results --clean",
     "allure:open": "allure open ./allure-report",
     "allure:report": "npm run allure:generate && npm run allure:open"
