--- a/utils/env/.env.test
+++ b/utils/env/.env.test
@@ -1,3 +1,3 @@
 BASEURL = https://portalv2.qa.interswitchng.com/apps/isw-nibbs-dd-ui-portlet
 EMAIL = "olamide.ige"
-PASSWORD = "XoXolets99%&"
+PASSWORD = "@@INTERswitch12345"
